--- a/src/language/en.json
+++ b/src/language/en.json
@@ -5,6 +5,34 @@
         "thành công": "success",
         "thông báo": "show modal",
         "vui lòng chọn..." : "please choose...",
-        "không có dữ liệu": "no data"
+        "không có dữ liệu": "no data",
+        "THÀNH PHẦN": "COMPONENTS",
+        "CHẾ ĐỘ": "MODE",
+        "SÁNG": "LIGHT",
+        "TỐI": "DARK",
+        "NGÔN NGỮ": "LANGUAGE",
+        "CÀI ĐẶT": "SETTING",
+        "Thành phần phương thức cung cấp nền tảng vững chắc để tạo hộp thoại, cửa sổ bật lên, hộp đèn hoặc bất kỳ thứ gì khác.": "The modal component provides a solid foundation for creating dialogs, popovers, lightboxes, or whatever else.",
+        "Phương thức cơ bản": "Basic modal",
+        "Toast hiển thị một thông báo ngắn, quan trọng theo cách thu hút sự chú ý của người dùng mà không làm gián đoạn tác vụ của người dùng.": "Toast displays a short, important message in a way that attracts the users attention without interrupting the users task.",
+        "Toast cơ bản": "Basic toast",
+        "Toast đưa ra ba mức độ nghiêm trọng đặt biểu tượng và màu sắc đặc biệt.": "Toast offers three severity levels that set a distinctive icon and color.",
+        "Các thành phần AdvanceSelect được sử dụng để thu thập dữ liệu do người dùng cung cấp từ danh sách các tùy chọn.": "An AdvanceSelect components are used for collecting user provided data from a list of options.",
+        "Mục lục": "Table of Content",
+        "AdvanceSelect mặc định có thể lựa chọn một thành phần trong danh sách các lựa chọn": "AdvanceSelect can by default select an element from a list of choices",
+        "Multiple AdvanceSelect có thể xử lý nhiều lựa chọn. Nó được kích hoạt với thuộc tính multiple.": "An AdvanceSelect component can handle multiple selections. Its enabled with multiple props.",
+        "AdvanceSelect bị vô hiệu hóa. Nó được kích hoạt với tham số disabled.": "There are no options show when user click on disabled AdvanceSelect. Its enabled with disabled props.",
+        "Cơ bản": "Default",
+        "AdvanceSelect cơ bản": "Default Advance Select",
+        "AdvanceSelect đa lựa chọn":"Multiple value Advance Select",
+        "AdvanceSelect vô hiệu": "Disable AdvanceSelect",
+        "Đây là tin nhắn cảnh báo": "This is warrn message",
+        "Đây là tin nhắn thành công": "This is success message",
+        "Đây là tin nhắn báo lỗi" : "This is error message",
+        "UploadImage cho phép người dùng tải hình ảnh lên, đồng thời có thể thực hiện các thao tác như thay đổi hình ảnh, phóng to hình ảnh hoặc tải hình ảnh về máy" : "UploadImage provides user to upload these image into view, user can also change the image, zoom in or download image to the device",
+        "Tiêu đề": "Title",
+        "Nội dung": "Body",
+        "Hủy" : "Cancel",
+        "Xác nhận": "Confirm"
     }
     
