--- a/src/language/jp.json
+++ b/src/language/jp.json
@@ -4,7 +4,35 @@
     "cảnh báo": "警告",
     "lỗi": "エラー",
     "thành công": "成功",
-    "thông báo": "通知",
-    "vui lòng chọn..." : "選んでください...",
-    "không có dữ liệu": "データなし"
+    "thông báo": "モーダルを表示",
+    "vui lòng chọn..." : "選択してください...",
+    "không có dữ liệu": "データなし",
+    "THÀNH PHẦN": "コンポーネント",
+    "CHẾ ĐỘ": "モード",
+    "SÁNG": "光",
+    "TỐI": "暗い",
+    "NGÔN NGỮ": "言語",
+    "CÀI ĐẶT": "設定",
+    "Thành phần phương thức cung cấp nền tảng vững chắc để tạo hộp thoại, cửa sổ bật lên, hộp đèn hoặc bất kỳ thứ gì khác.": "モーダル コンポーネントは、ダイアログ、ポップオーバー、ライトボックスなどを作成するための強固な基盤を提供します。 それ以外。",
+    "Phương thức cơ bản": "基本モーダル",
+    "Toast hiển thị một thông báo ngắn, quan trọng theo cách thu hút sự chú ý của người dùng mà không làm gián đoạn tác vụ của người dùng.": "トーストには、ユーザーの注意を引く方法で短く重要なメッセージが表示されます。 ユーザーのタスクを中断することなく。",
+    "Toast cơ bản": "基本的なトースト",
+    "Toast đưa ra ba mức độ nghiêm trọng đặt biểu tượng và màu sắc đặc biệt.": "トーストには、独特のアイコンと色を設定する 3 つの重大度レベルが用意されています。",
+    "Các thành phần AdvanceSelect được sử dụng để thu thập dữ liệu do người dùng cung cấp từ danh sách các tùy chọn.": "コンポーネントは収集に使用されますユーザーがオプションのリストからデータを提供しました。",
+    "Mục lục": "目次",
+    "AdvanceSelect mặc định có thể lựa chọn một thành phần trong danh sách các lựa chọn": "を選択してください' ローカル検索で",
+    "Multiple AdvanceSelect có thể xử lý nhiều lựa chọn. Nó được kích hoạt với thuộc tính multiple.": "コンポーネントは複数の選択を処理できます。複数のプロパティで有効になります。",
+    "AdvanceSelect bị vô hiệu hóa. Nó được kích hoạt với tham số disabled.": "を選択します。 無効になっているわけではありません。",
+    "Cơ bản": "デフォルト",
+    "AdvanceSelect cơ bản": "デフォルトのアドバンスセレクト",
+    "AdvanceSelect đa lựa chọn":"無効な事前選択",
+    "AdvanceSelect vô hiệu": "複数の値の詳細選択",
+    "Đây là tin nhắn cảnh báo": "メッセージが表示されます",
+    "Đây là tin nhắn thành công": "ルトのアドバンスセレクト",
+    "Đây là tin nhắn báo lỗi" : "るわけではありません。",
+    "UploadImage cho phép người dùng tải hình ảnh lên, đồng thời có thể thực hiện các thao tác như thay đổi hình ảnh, phóng to hình ảnh hoặc tải hình ảnh về máy" : "モーダル コンポーネントは、ダイアログ、ポップオーバー、ライト の選択を処理できます。複数のプロパティで有効になりま",
+    "Tiêu đề": "ドバンス",
+    "Nội dung": "表示さ",
+    "Hủy" : "ているわ",
+    "Xác nhận": "い' ロ"
 }
